--- a/beszel/site/src/locales/en/translation.json
+++ b/beszel/site/src/locales/en/translation.json
@@ -160,6 +160,7 @@
 		"docker_cpu_usage": "Docker CPU Usage",
 		"docker_cpu_des": "Average CPU utilization of containers",
 		"total_memory_usage": "Total Memory Usage",
+		"cache_buffers": "Cache / Buffers",
 		"memory_des": "Precise utilization at the recorded time",
 		"docker_memory_usage": "Docker Memory Usage",
 		"docker_memory_des": "Memory usage of docker containers",
@@ -167,8 +168,12 @@
 		"disk_des": "Usage of root partition",
 		"disk_io": "Disk I/O",
 		"disk_io_des": "Throughput of root filesystem",
+		"read": "Read",
+		"write": "Write",
 		"bandwidth": "Bandwidth",
 		"bandwidth_des": "Network traffic of public interfaces",
+		"sent": "Sent",
+		"received": "Received",
 		"docker_network_io": "Docker Network I/O",
 		"docker_network_io_des": "Network traffic of docker containers",
 		"swap_usage": "Swap Usage",
@@ -176,6 +181,7 @@
 		"temperature": "Temperature",
 		"temperature_des": "Temperatures of system sensors",
 		"usage": "Usage",
+		"used": "Used",
 		"disk_usage_of": "Disk usage of",
 		"throughput_of": "Throughput of",
 		"waiting_for": "Waiting for enough records to display"
