--- a/beszel/site/src/locales/ru/translation.json
+++ b/beszel/site/src/locales/ru/translation.json
@@ -180,7 +180,13 @@
 		"usage": "Использование",
 		"disk_usage_of": "Использование диска",
 		"throughput_of": "Пропускная способность",
-		"waiting_for": "Ожидание достаточного количества записей для отображения"
+		"waiting_for": "Ожидание достаточного количества записей для отображения",
+		"cache_buffers": "Кэш/Буферы",
+		"read": "Чтение",
+		"write": "Запись",
+		"sent": "Отправлено",
+		"received": "Получено",
+		"used": "Использовано"
 	},
 	"auth": {
 		"login": "Пожалуйста, войдите в свою учетную запись",
