rtl layout progress and updates to arabic translations

--- a/beszel/site/src/locales/ar/translation.json
+++ b/beszel/site/src/locales/ar/translation.json
@@ -1,227 +1,227 @@
 {
-    "all_systems": "جميع الأنظمة",
-    "filter": "تصفية...",
-    "copy": "نسخ",
-    "add": "إضافة",
-    "search": "بحث",
-    "system": "نظام",
-    "systems": "الأنظمة",
-    "cancel": "إلغاء",
-    "continue": "متابعة",
-    "minutes_zero": "",
-    "minutes_one": "{{count}} دقيقة",
-    "minutes_two": "",
-    "minutes_few": "",
-    "minutes_many": "",
-    "minutes_other": "{{count}} دقائق",
-    "hours_zero": "",
-    "hours_one": "{{count}} ساعة",
-    "hours_two": "",
-    "hours_few": "",
-    "hours_many": "",
-    "hours_other": "{{count}} ساعات",
-    "days_zero": "",
-    "days_one": "",
-    "days_two": "",
-    "days_few": "",
-    "days_many": "",
-    "days_other": "{{count}} أيام",
-    "weeks_zero": "",
-    "weeks_one": "{{count}} أسبوع",
-    "weeks_two": "",
-    "weeks_few": "",
-    "weeks_many": "",
-    "weeks_other": "",
-    "home": {
-        "active_alerts": "التنبيهات النشطة",
-        "active_des": "يتجاوز {{value}}{{unit}} في آخر ",
-        "subtitle": "يتم التحديث في الوقت الفعلي. انقر على نظام لعرض المعلومات."
-    },
-    "systems_table": {
-        "system": "النظام",
-        "memory": "الذاكرة",
-        "cpu": "المعالج",
-        "disk": "القرص",
-        "net": "الشبكة",
-        "agent": "الوكيل",
-        "no_systems_found": "لم يتم العثور على أنظمة.",
-        "open_menu": "فتح القائمة",
-        "resume": "استئناف",
-        "pause": "إيقاف مؤقت",
-        "copy_host": "نسخ المضيف",
-        "delete": "حذف",
-        "delete_confirm": "هل أنت متأكد أنك تريد حذف {{name}}؟",
-        "delete_confirm_des_1": "لا يمكن التراجع عن هذا الإجراء. سيؤدي هذا إلى حذف جميع السجلات الحالية نهائياً لـ",
-        "delete_confirm_des_2": "من قاعدة البيانات."
-    },
-    "alerts": {
-        "title": "التنبيهات",
-        "subtitle_1": "راجع",
-        "notification_settings": "إعدادات الإشعارات",
-        "subtitle_2": "لتكوين كيفية استلام التنبيهات.",
-        "overwrite_existing_alerts": "استبدال التنبيهات الموجودة",
-        "info": {
-            "status": "الحالة",
-            "status_des": "يتم التشغيل عند تبديل الحالة بين متصل ومنقطع.",
-            "cpu_usage": "استخدام المعالج",
-            "cpu_usage_des": "يتم التشغيل عندما يتجاوز استخدام المعالج الحد.",
-            "memory_usage": "استخدام الذاكرة",
-            "memory_usage_des": "يتم التشغيل عندما يتجاوز استخدام الذاكرة الحد.",
-            "disk_usage": "استخدام القرص",
-            "disk_usage_des": "يتم التشغيل عندما يتجاوز استخدام أي قرص الحد.",
-            "bandwidth": "النطاق الترددي",
-            "bandwidth_des": "يتم التشغيل عندما يتجاوز استخدام الشبكة الحد.",
-            "temperature": "",
-            "temperature_des": ""
-        },
-        "average_exceeds": "المتوسط يتجاوز",
-        "for": "لمدة"
-    },
-    "settings": {
-        "settings": "الإعدادات",
-        "subtitle": "إدارة تفضيلات العرض والإشعارات.",
-        "save_settings": "حفظ الإعدادات",
-        "export_configuration": "تصدير الإعدادات",
-        "general": {
-            "title": "عام",
-            "subtitle": "تغيير خيارات التطبيق العامة.",
-            "language": {
-                "title": "اللغة",
-                "subtitle_1": "هل تريد مساعدتنا في تحسين ترجماتنا؟ راجع",
-                "subtitle_2": "للمزيد من التفاصيل.",
-                "preferred_language": "اللغة المفضلة"
-            },
-            "chart_options": {
-                "title": "خيارات المخطط",
-                "subtitle": "ضبط خيارات عرض المخططات.",
-                "default_time_period": "الفترة الزمنية الافتراضية",
-                "default_time_period_des": "يحدد النطاق الزمني الافتراضي للمخططات عند عرض النظام."
-            }
-        },
-        "notifications": {
-            "title": "الإشعارات",
-            "subtitle_1": "تكوين كيفية استلام إشعارات التنبيه.",
-            "subtitle_2": "هل تبحث عن مكان إنشاء التنبيهات؟ انقر على رمز الجرس",
-            "subtitle_3": "في جدول الأنظمة.",
-            "email": {
-                "title": "إشعارات البريد الإلكتروني",
-                "please": "الرجاء",
-                "configure_an_SMTP_server": "تكوين خادم SMTP",
-                "to_ensure_alerts_are_delivered": "لضمان تسليم التنبيهات.",
-                "to_email_s": "إلى البريد الإلكتروني",
-                "enter_email_address": "أدخل عنوان البريد الإلكتروني...",
-                "des": "احفظ العنوان باستخدام مفتاح الإدخال أو الفاصلة. اتركه فاغاً لتعطيل إشعارات البريد الإلكتروني."
-            },
-            "webhook_push": {
-                "title": "إشعارات Webhook / Push",
-                "des_1": "يستخدم Beszel",
-                "des_2": "للتكامل مع خدمات الإشعارات الشائعة.",
-                "add_url": "إضافة URL"
-            }
-        },
-        "yaml_config": {
-            "short_title": "تكوين YAML",
-            "title": "تكوين YAML",
-            "subtitle": "تصدير تكوين النظام الحالي.",
-            "des_1": "يستخدم النظام",
-            "des_2": "ملف تكوين لإدارة البيانات",
-            "des_3": "عند كل إعادة تشغيل، سيتم تحديث الأنظمة في قاعدة البيانات لتطابق الأنظمة المحددة في الملف.",
-            "alert": {
-                "title": "تحذير - احتمال فقدان البيانات",
-                "des_1": "الأنظمة الموجودة غير المحددة في",
-                "des_2": "سيتم حذفها. يرجى النسخ الاحتياطي بانتظام."
-            }
-        },
-        "language": "اللغة"
-    },
-    "user_dm": {
-        "users": "المستخدمون",
-        "logs": "السجلات",
-        "backups": "النسخ الاحتياطي",
-        "auth_providers": "مزودو المصادقة",
-        "log_out": "تسجيل الخروج"
-    },
-    "themes": {
-        "toggle_theme": "تبديل السمة",
-        "light": "فاتح",
-        "dark": "داكن",
-        "system": "النظام"
-    },
-    "add_system": {
-        "add_new_system": "إضافة نظام جديد",
-        "binary": "الملف الثنائي",
-        "dialog_des_1": "يجب تشغيل العميل على الخادم للاتصال. انسخ",
-        "dialog_des_2": "إلى الخادم المستهدف للتثبيت.",
-        "name": "الاسم",
-        "host_ip": "المضيف/IP",
-        "port": "المنفذ",
-        "key": "المفتاح العام",
-        "click_to_copy": "انقر للنسخ",
-        "command": "الأمر",
-        "add_system": "إضافة نظام"
-    },
-    "command": {
-        "search": "البحث في الإعدادات أو الأنظمة...",
-        "pages_settings": "الصفحات / الإعدادات",
-        "dashboard": "لوحة التحكم",
-        "documentation": "التوثيق",
-        "SMTP_settings": "إعدادات SMTP",
-        "page": "الصفحة",
-        "admin": "المسؤول"
-    },
-    "monitor": {
-        "toggle_grid": "تبديل الشبكة",
-        "average": "المتوسط",
-        "max_1_min": "أقصى 1 دقيقة",
-        "total_cpu_usage": "إجمالي استخدام المعالج",
-        "cpu_des": "استخدام المعالج على مستوى النظام",
-        "docker_cpu_usage": "استخدام معالج Docker",
-        "docker_cpu_des": "متوسط استخدام المعالج للحاويات",
-        "total_memory_usage": "إجمالي استخدام الذاكرة",
-        "memory_des": "الاستخدام الدقيق في وقت التسجيل",
-        "docker_memory_usage": "استخدام ذاكرة Docker",
-        "docker_memory_des": "استخدام الذاكرة لحاويات Docker",
-        "disk_space": "مساحة القرص",
-        "disk_des": "استخدام القسم الجذر",
-        "disk_io": "إدخال/إخراج القرص",
-        "disk_io_des": "معدل نقل نظام الملفات الجذر",
-        "bandwidth": "النطاق الترددي",
-        "bandwidth_des": "حركة الشبكة للواجهات العامة",
-        "docker_network_io": "إدخال/إخراج شبكة Docker",
-        "docker_network_io_des": "حركة الشبكة لحاويات Docker",
-        "swap_usage": "استخدام المبادلة",
-        "swap_des": "مساحة المبادلة المستخدمة من قبل النظام",
-        "temperature": "درجة الحرارة",
-        "temperature_des": "درجات حرارة مستشعرات النظام",
-        "usage": "الاستخدام",
-        "disk_usage_of": "استخدام القرص لـ",
-        "throughput_of": "معدل نقل",
-        "waiting_for": "في انتظار سجلات كافية للعرض",
-        "cache_buffers": "ذاكرة التخزين المؤقت / المخازن المؤقتة",
-        "read": "قراءة",
-        "write": "كتابة",
-        "sent": "مرسل",
-        "received": "مستلم",
-        "used": "مستخدم"
-    },
-    "auth": {
-        "login": "الرجاء تسجيل الدخول إلى حسابك",
-        "reset": "أدخل البريد الإلكتروني لإعادة تعيين كلمة المرور",
-        "create": "الرجاء إنشاء حساب مسؤول",
-        "create_account": "إنشاء حساب",
-        "sign_in": "تسجيل الدخول",
-        "openid_des": "يدعم Beszel OpenID Connect والعديد من مزودي مصادقة OAuth2.",
-        "please_view_the": "الرجاء مراجعة",
-        "for_instructions": "للتعليمات.",
-        "forgot_password": "نسيت كلمة المرور؟",
-        "reset_password": "إعادة تعيين كلمة المرور",
-        "command_line_instructions": "تعليمات سطر الأوامر",
-        "command_1": "إذا فقدت كلمة مرور حساب المسؤول، يمكنك إعادة تعيينها باستخدام الأمر التالي.",
-        "command_2": "ثم قم بتسجيل الدخول إلى الخلفية وإعادة تعيين كلمة مرور حساب المستخدم في جدول المستخدمين."
-    },
-    "clipboard": {
-        "copied": "تم النسخ إلى الحافظة",
-        "title": "نسخ النص",
-        "des": "النسخ التلقائي يتطلب سياق آمن."
-    }
+	"all_systems": "جميع الأنظمة",
+	"filter": "تصفية...",
+	"copy": "نسخ",
+	"add": "إضافة",
+	"search": "بحث",
+	"system": "نظام",
+	"systems": "الأنظمة",
+	"cancel": "إلغاء",
+	"continue": "متابعة",
+	"minutes_zero": "٠ دقائق",
+	"minutes_one": "{{count}} دقيقة",
+	"minutes_two": "{{count}} دقيقتان",
+	"minutes_few": "{{count}} دقائق",
+	"minutes_many": "{{count}} دقيقة",
+	"minutes_other": "{{count}} دقائق",
+	"hours_zero": "٠ ساعات",
+	"hours_one": "{{count}} ساعة",
+	"hours_two": "{{count}} ساعتان",
+	"hours_few": "{{count}} ساعات",
+	"hours_many": "{{count}} ساعة",
+	"hours_other": "{{count}} ساعات",
+	"days_zero": "٠ أيام",
+	"days_one": "{{count}} يوم",
+	"days_two": "{{count}} يومان",
+	"days_few": "{{count}} أيام",
+	"days_many": "{{count}} يومًا",
+	"days_other": "{{count}} أيام",
+	"weeks_zero": "٠ أسابيع",
+	"weeks_one": "{{count}} أسبوع",
+	"weeks_two": "{{count}} أسبوعان",
+	"weeks_few": "{{count}} أسابيع",
+	"weeks_many": "{{count}} أسبوعًا",
+	"weeks_other": "{{count}} أسابيع",
+	"home": {
+		"active_alerts": "التنبيهات النشطة",
+		"active_des": "يتجاوز {{value}}{{unit}} في آخر ",
+		"subtitle": "يتم التحديث في الوقت الفعلي. انقر على نظام لعرض المعلومات."
+	},
+	"systems_table": {
+		"system": "النظام",
+		"memory": "الذاكرة",
+		"cpu": "المعالج",
+		"disk": "القرص",
+		"net": "الشبكة",
+		"agent": "الوكيل",
+		"no_systems_found": "لم يتم العثور على أنظمة.",
+		"open_menu": "فتح القائمة",
+		"resume": "استئناف",
+		"pause": "إيقاف مؤقت",
+		"copy_host": "نسخ المضيف",
+		"delete": "حذف",
+		"delete_confirm": "هل أنت متأكد أنك تريد حذف {{name}}؟",
+		"delete_confirm_des_1": "لا يمكن التراجع عن هذا الإجراء. سيؤدي هذا إلى حذف جميع السجلات الحالية نهائياً لـ",
+		"delete_confirm_des_2": "من قاعدة البيانات."
+	},
+	"alerts": {
+		"title": "التنبيهات",
+		"subtitle_1": "راجع",
+		"notification_settings": "إعدادات الإشعارات",
+		"subtitle_2": "لتكوين كيفية استلام التنبيهات.",
+		"overwrite_existing_alerts": "استبدال التنبيهات الموجودة",
+		"info": {
+			"status": "الحالة",
+			"status_des": "يتم التشغيل عند تبديل الحالة بين متصل ومنقطع.",
+			"cpu_usage": "استخدام المعالج",
+			"cpu_usage_des": "يتم التشغيل عندما يتجاوز استخدام المعالج الحد.",
+			"memory_usage": "استخدام الذاكرة",
+			"memory_usage_des": "يتم التشغيل عندما يتجاوز استخدام الذاكرة الحد.",
+			"disk_usage": "استخدام القرص",
+			"disk_usage_des": "يتم التشغيل عندما يتجاوز استخدام أي قرص الحد.",
+			"bandwidth": "النطاق الترددي",
+			"bandwidth_des": "يتم التشغيل عندما يتجاوز استخدام الشبكة الحد.",
+			"temperature": "درجة الحرارة",
+			"temperature_des": "يتم التشغيل عندما يتجاوز أي مستشعر الحد المسموح به."
+		},
+		"average_exceeds": "المتوسط يتجاوز",
+		"for": "لمدة"
+	},
+	"settings": {
+		"settings": "الإعدادات",
+		"subtitle": "إدارة تفضيلات العرض والإشعارات.",
+		"save_settings": "حفظ الإعدادات",
+		"export_configuration": "تصدير الإعدادات",
+		"general": {
+			"title": "عام",
+			"subtitle": "تغيير خيارات التطبيق العامة.",
+			"language": {
+				"title": "اللغة",
+				"subtitle_1": "هل تريد مساعدتنا في تحسين ترجماتنا؟ راجع",
+				"subtitle_2": "للمزيد من التفاصيل.",
+				"preferred_language": "اللغة المفضلة"
+			},
+			"chart_options": {
+				"title": "خيارات المخطط",
+				"subtitle": "ضبط خيارات عرض المخططات.",
+				"default_time_period": "الفترة الزمنية الافتراضية",
+				"default_time_period_des": "يحدد النطاق الزمني الافتراضي للمخططات عند عرض النظام."
+			}
+		},
+		"notifications": {
+			"title": "الإشعارات",
+			"subtitle_1": "تكوين كيفية استلام إشعارات التنبيه.",
+			"subtitle_2": "هل تبحث عن مكان إنشاء التنبيهات؟ انقر على رمز الجرس",
+			"subtitle_3": "في جدول الأنظمة.",
+			"email": {
+				"title": "إشعارات البريد الإلكتروني",
+				"please": "الرجاء",
+				"configure_an_SMTP_server": "تكوين خادم SMTP",
+				"to_ensure_alerts_are_delivered": "لضمان تسليم التنبيهات.",
+				"to_email_s": "إلى البريد الإلكتروني",
+				"enter_email_address": "أدخل عنوان البريد الإلكتروني...",
+				"des": "احفظ العنوان باستخدام مفتاح الإدخال أو الفاصلة. اتركه فاغاً لتعطيل إشعارات البريد الإلكتروني."
+			},
+			"webhook_push": {
+				"title": "إشعارات Webhook / Push",
+				"des_1": "يستخدم Beszel",
+				"des_2": "للتكامل مع خدمات الإشعارات الشائعة.",
+				"add_url": "إضافة URL"
+			}
+		},
+		"yaml_config": {
+			"short_title": "تكوين YAML",
+			"title": "تكوين YAML",
+			"subtitle": "تصدير تكوين النظام الحالي.",
+			"des_1": "يستخدم النظام",
+			"des_2": "ملف تكوين لإدارة البيانات",
+			"des_3": "عند كل إعادة تشغيل، سيتم تحديث الأنظمة في قاعدة البيانات لتطابق الأنظمة المحددة في الملف.",
+			"alert": {
+				"title": "تحذير - احتمال فقدان البيانات",
+				"des_1": "الأنظمة الموجودة غير المحددة في",
+				"des_2": "سيتم حذفها. يرجى النسخ الاحتياطي بانتظام."
+			}
+		},
+		"language": "اللغة"
+	},
+	"user_dm": {
+		"users": "المستخدمون",
+		"logs": "السجلات",
+		"backups": "النسخ الاحتياطي",
+		"auth_providers": "مزودو المصادقة",
+		"log_out": "تسجيل الخروج"
+	},
+	"themes": {
+		"toggle_theme": "تبديل السمة",
+		"light": "فاتح",
+		"dark": "داكن",
+		"system": "النظام"
+	},
+	"add_system": {
+		"add_new_system": "إضافة نظام جديد",
+		"binary": "الملف الثنائي",
+		"dialog_des_1": "يجب تشغيل العميل على الخادم للاتصال. انسخ",
+		"dialog_des_2": "إلى الخادم المستهدف للتثبيت.",
+		"name": "الاسم",
+		"host_ip": "المضيف/IP",
+		"port": "المنفذ",
+		"key": "المفتاح العام",
+		"click_to_copy": "انقر للنسخ",
+		"command": "الأمر",
+		"add_system": "إضافة نظام"
+	},
+	"command": {
+		"search": "البحث في الإعدادات أو الأنظمة...",
+		"pages_settings": "الصفحات / الإعدادات",
+		"dashboard": "لوحة التحكم",
+		"documentation": "التوثيق",
+		"SMTP_settings": "إعدادات SMTP",
+		"page": "الصفحة",
+		"admin": "المسؤول"
+	},
+	"monitor": {
+		"toggle_grid": "تبديل الشبكة",
+		"average": "المتوسط",
+		"max_1_min": "أقصى 1 دقيقة",
+		"total_cpu_usage": "إجمالي استخدام المعالج",
+		"cpu_des": "استخدام المعالج على مستوى النظام",
+		"docker_cpu_usage": "استخدام معالج Docker",
+		"docker_cpu_des": "متوسط استخدام المعالج للحاويات",
+		"total_memory_usage": "إجمالي استخدام الذاكرة",
+		"memory_des": "الاستخدام الدقيق في وقت التسجيل",
+		"docker_memory_usage": "استخدام ذاكرة Docker",
+		"docker_memory_des": "استخدام الذاكرة لحاويات Docker",
+		"disk_space": "مساحة القرص",
+		"disk_des": "استخدام القسم الجذر",
+		"disk_io": "إدخال/إخراج القرص",
+		"disk_io_des": "معدل نقل نظام الملفات الجذر",
+		"bandwidth": "النطاق الترددي",
+		"bandwidth_des": "حركة الشبكة للواجهات العامة",
+		"docker_network_io": "إدخال/إخراج شبكة Docker",
+		"docker_network_io_des": "حركة الشبكة لحاويات Docker",
+		"swap_usage": "استخدام المبادلة",
+		"swap_des": "مساحة المبادلة المستخدمة من قبل النظام",
+		"temperature": "درجة الحرارة",
+		"temperature_des": "درجات حرارة مستشعرات النظام",
+		"usage": "الاستخدام",
+		"disk_usage_of": "استخدام القرص لـ",
+		"throughput_of": "معدل نقل",
+		"waiting_for": "في انتظار سجلات كافية للعرض",
+		"cache_buffers": "ذاكرة التخزين المؤقت / المخازن المؤقتة",
+		"read": "قراءة",
+		"write": "كتابة",
+		"sent": "مرسل",
+		"received": "مستلم",
+		"used": "مستخدم"
+	},
+	"auth": {
+		"login": "الرجاء تسجيل الدخول إلى حسابك",
+		"reset": "أدخل البريد الإلكتروني لإعادة تعيين كلمة المرور",
+		"create": "الرجاء إنشاء حساب مسؤول",
+		"create_account": "إنشاء حساب",
+		"sign_in": "تسجيل الدخول",
+		"openid_des": "يدعم Beszel OpenID Connect والعديد من مزودي مصادقة OAuth2.",
+		"please_view_the": "الرجاء مراجعة",
+		"for_instructions": "للتعليمات.",
+		"forgot_password": "نسيت كلمة المرور؟",
+		"reset_password": "إعادة تعيين كلمة المرور",
+		"command_line_instructions": "تعليمات سطر الأوامر",
+		"command_1": "إذا فقدت كلمة مرور حساب المسؤول، يمكنك إعادة تعيينها باستخدام الأمر التالي.",
+		"command_2": "ثم قم بتسجيل الدخول إلى الخلفية وإعادة تعيين كلمة مرور حساب المستخدم في جدول المستخدمين."
+	},
+	"clipboard": {
+		"copied": "تم النسخ إلى الحافظة",
+		"title": "نسخ النص",
+		"des": "النسخ التلقائي يتطلب سياق آمن."
+	}
 }
